# cognitive_automobile_laboratory

./: README.md
anicar3_kal4/src/: .rosinstall  CMakeLists.txt
anicar3_kal4/src/bbf_commons/: CMakeLists.txt  README.md  package.xml
anicar3_kal4/src/bbf_commons/include/bbf_commons/: Helpers.hpp  HomogeneousTransformationMatrix.hpp  LRUCache.hpp  LayeredDAGSolver.hpp  LocalCartesianCSFromGPS.hpp  LocalGeographicCS.hpp  Plotter.hpp  PlyWriter.hpp  PngDistanceImage.hpp  Polygon.hpp  SConscript  TICTOC.h  TableLookup.h  TableLookup.hpp  assertions.hpp  basicTypes.h  cAffinity.h  cCamera.h  cOpenCvHelper.h  camera.txt  cluster_sorted.hpp  color1.map  color3.map  color4.map  color_by_index.hpp  color_by_index_hsv.hpp  concurrent_queue.hpp  constants.hpp  constexpr.hpp  content_of.hpp  convert_colorspace.hpp  correct_time_offset.hpp  create_log_folder.hpp  critical_section_modes.h  eigen_helper.hpp  filesystem.hpp  hsv2rgb.hpp  jsonify.hpp  layered_dag_demo.cpp  line_line_intersection.hpp  (+29 more)
anicar3_kal4/src/bbf_geometry/: CMakeLists.txt  package.xml
anicar3_kal4/src/bbf_geometry/include/bbf_geometry/: convex_hull.hpp  geometry.h  line_segment_intersection.hpp
anicar3_kal4/src/bbf_geometry/src/: convex_hull.cpp  geometry.cpp
anicar3_kal4/src/cornucopia/: CMakeLists.txt  README.txt  package.xml
anicar3_kal4/src/cornucopia/include/cornucopia/: Debugging.h  Polyline.h
anicar3_kal4/src/cornucopia/src/: Debugging.cpp  Fresnel.cpp  TwoCurveCombine.cpp
anicar3_kal4/src/direction_sign_detector/src/: dir.py
anicar3_kal4/src/generic_logger/: CMakeLists.txt
anicar3_kal4/src/generic_logger/include/generic_logger/: generic_logger.hpp
anicar3_kal4/src/gnss_coordinate_transform/: .gitignore  CMakeLists.txt  README.md  package.xml
anicar3_kal4/src/gnss_coordinate_transform/include/gnss_coordinate_transform/: convert_coordinates.hpp  local_geographic_cs.hpp  mercator.hpp
anicar3_kal4/src/gnss_coordinate_transform/python_api/: python.cpp
anicar3_kal4/src/gnss_coordinate_transform/test/: test_gnss_coordinate_transform.cpp  test_pyapi.py
anicar3_kal4/src/image_crop_coordinate_converter/: CMakeLists.txt  README.md  package.xml
anicar3_kal4/src/image_crop_coordinate_converter/include/image_crop_coordinate_converter/: converter.h  types.h
anicar3_kal4/src/image_preproc/include/image_preproc/: resize.h
anicar3_kal4/src/image_preproc/src/: resize.cpp
anicar3_kal4/src/joy_converter_ros_tool/launch/: joystick.launch
anicar3_kal4/src/kal/: README.md  package.xml
anicar3_kal4/src/kal/launch/: demo_path_follower.launch  demo_path_follower_cp.launch  demo_path_follower_robot.launch  master_live.launch
anicar3_kal4/src/kinect2_bridge/launch/: kinect2_bridge.launch
anicar3_kal4/src/motor_interface_ros_tool/msg/: MotorCommand.msg  ServoCommand.msg
anicar3_kal4/src/motor_interface_ros_tool/src/motor_interface/: motor_interface_node.cpp
anicar3_kal4/src/neverdrive_obstacle_detection_ros_tool/: .gitignore
anicar3_kal4/src/neverdrive_obstacle_detection_ros_tool/src/obstacle_detection/: obstacle_detection.cpp
anicar3_kal4/src/osm/: .gitlab-ci.yml  CMakeLists.txt  README.md  package.xml
anicar3_kal4/src/osm/include/osm/: osmelements.h  osmhelpers.h
anicar3_kal4/src/osm/src/: osmelements.cpp  osmhelpers.cpp
anicar3_kal4/src/osm/test/: test_osm.cpp
anicar3_kal4/src/path_generator_ros_tool/: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
anicar3_kal4/src/path_generator_ros_tool/cfg/: PathGenerator.rosif
anicar3_kal4/src/path_generator_ros_tool/launch/: path_generator_node.launch  path_generator_nodelet.launch
anicar3_kal4/src/path_generator_ros_tool/launch/params/: path_generator_parameters.yaml
anicar3_kal4/src/path_generator_ros_tool/res/: raw_7_18_exit.osm
anicar3_kal4/src/path_generator_ros_tool/res/old/: fitted_road_map.osm  raw_path.osm
anicar3_kal4/src/path_generator_ros_tool/src/path_generator/: bag.hpp  path_generator.cpp  path_generator.hpp  path_generator_node.cpp  path_generator_nodelet.cpp
anicar3_kal4/src/path_generator_ros_tool/test/: path_generator_node.cpp  path_generator_node.test  path_generator_nodelet.cpp  path_generator_nodelet.test
anicar3_kal4/src/path_provider_ros_tool/res/: path_provider.rviz
anicar3_kal4/src/path_publisher_ros_tool/: package.xml
anicar3_kal4/src/path_publisher_ros_tool/cfg/: PathPlanning.rosif  PathPublisher.rosif
anicar3_kal4/src/path_publisher_ros_tool/launch/: path_publisher_node_robot.launch
anicar3_kal4/src/path_publisher_ros_tool/launch/params/: path_planning_parameters.yaml
anicar3_kal4/src/path_publisher_ros_tool/res/maps/: 10_C_D_forward_reverse.osm  11_exit.osm  1_A_B_forward.osm  4_B_D_left.osm  9_A_B_forward_reverse.osm
anicar3_kal4/src/path_publisher_ros_tool/src/path_planning/: path_planning.cpp  path_planning.hpp
anicar3_kal4/src/pedestrian_detection_ros_tool/: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
anicar3_kal4/src/pedestrian_detection_ros_tool/cfg/: PedestrianDetection.rosif
anicar3_kal4/src/pedestrian_detection_ros_tool/launch/: pedestrian_detection_node.launch  pedestrian_detection_nodelet.launch
anicar3_kal4/src/pedestrian_detection_ros_tool/launch/params/: pedestrian_detection_parameters.yaml
anicar3_kal4/src/pedestrian_detection_ros_tool/test/: pedestrian_detection_node.cpp  pedestrian_detection_node.test  pedestrian_detection_nodelet.cpp  pedestrian_detection_nodelet.test
anicar3_kal4/src/road_map/: CMakeLists.txt  README.md  package.xml
anicar3_kal4/src/road_map/include/road_map/: RoadMap.hpp  osm_writer.h
anicar3_kal4/src/road_map/src/: RoadMap.cpp  osm_writer.cpp
anicar3_kal4/src/road_map/test/: test_road_map.cpp
anicar3_kal4/src/rosparam_handler/templates/: Parameters.h.template
anicar3_kal4/src/stop_sign_detector/src/: net14_r_cpu.pickle  stop.py
anicar3_kal4/src/util_eigen/: CMakeLists.txt  package.xml
anicar3_kal4/src/util_eigen/include/util_eigen/: PlyWriter.hpp  alignment.hpp
anicar3_kal4/src/util_eigen/test/: test_util_eigen.cpp
anicar3_kal4/src/vehicle_setup/res/: visualization.rviz
(+4 files in other folders)
