<?xml version="1.0"?>
<package format="2">
  <name>cornucopia</name>
  <version>0.0.0</version>
  <description>ToDo: Edit package description</description>

  <license>gpl</license>
  <maintainer email="piotr.orzechowski@kit.edu">Piotr Orzechowski</maintainer>
  <author email="piotr.orzechowski@kit.edu">Piotr Orzechowski</author>
  <url type="repository">https://gitlab.mrt.uni-karlsruhe.de/orzechowski/cornucopia</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mrt_cmake_modules</build_depend>
  <test_depend>gtest</test_depend>
  <!--
    Documentation for dependencies:
    <build_depend>            Build-time dependency required to build
                              this package, e.g. boost, opencv.
    <build_export_depend>     Exported build-time dependency required to
                              build packages that depend on this package,
                              e.g. boost, opencv.
    <exec_depend>             Execution dependency required to run this
                              package, e.g. boost, opencv.
    <depend>                  Build-time, exported build-time and execution
                              dependency. This is a bundled synonym for
                              <build_depend>, <build_export_depend> and
                              <exec_depend>.
  -->
  <depend>eigen</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
